--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        <ul class="nav-list">
            <li><a href="#films" class="nav-list_link">Films</a></li>
            <li><a href="#series" class="nav-list_link">Serials</a></li>
-           <li><a href="#widow" class="nav-list_link">Cartoons</a></li>
+           <li><a href="#widow" class="nav-list_link">widow</a></li>
            <li><a href="#collections" class="nav-list_link">Collections</a></li>
        </ul>
    </div>
